--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "stripe": "^15.10.0",
     "svix": "^1.23.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
